--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,9 @@
-= Example for Monitoring Confluent Platform with Prometheus and Grafana based on Docker
+= Example for Kafka Transactions and how Kafka Streams handles headers
+
+This example code shows what happens if a transactional producer and another non-transactional producer write to the same topic.
+A consumer with `isolation.level=read_committed` will just show all commited messages from the transactions and additionally all non-transactional messages.
+
+This example also shows how Kafka Streams will handle this situation (exactly the same) and how how kStreams handles message headers. These are by default forwarded in the most simple case.
 
 DISCLAIMER: This project is for demonstration purposes only. Using the concept in production is highly discouraged. Use at your own risk.
 
@@ -43,10 +48,23 @@ Change to the "clients" folder. Then use the following commands to run the code:
 ```
 
 == Some helpful commands
-Consume from the topic like this:
+Consume from the topic like this, including the headers of the messages:
 
 ```shell
-kafka-console-consumer --bootstrap-server localhost:9092 --topic topic-1 --from-beginning
+kafka-console-consumer --bootstrap-server localhost:9092 \
+    --from-beginning \
+    --property print.headers=true \
+    --topic topic-1
+```
+
+Note that the above command will also show uncommited messages. Thus, if you want to see only commited messages, use the following command instead:
+
+```shell
+kafka-console-consumer --bootstrap-server localhost:9092 \
+    --from-beginning \
+    --isolation-level=read_committed \
+    --property print.headers=true \
+    --topic topic-1
 ```
 
 You can delete the auto-created topic like this:
